# adderbox

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/adderbox/: __init__.py  control.py  folder.py  order.py  pipe.py  sync.py
tests/test_adderbox/: test_control.py  test_folder.py  test_order.py  test_pipe.py  test_sync.py
