[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adderbox"
version = "0.1.0"
authors = [{ name = "Weida Hong", email = "wdhongtw@example.com" }]
description = "Personal library and toolbox for Python"
keywords = []
readme = "README.md"
requires-python = ">=3.12"
classifiers = []

[project.urls]
"Homepage" = "https://example.com"

[tool.hatch.build]
only-include = ["src"]
sources = ["src"]
